<resources>
    <string name="app_name">Q2- Audio_Video</string>
    <string name="open_video_url">Open Video URL</string>
    <string name="audio_controls">Audio Controls</string>
    <string name="media_player">🎵 Media Player</string>
    <string name="no_file_loaded">No file loaded</string>
    <string name="status_idle">Status: Idle</string>
    <string name="open_audio_file">Open Audio File</string>
    <string name="pause">⏸ Pause</string>
    <string name="stop">⏹ Stop</string>
    <string name="restart">⏮ Restart</string>
    <string name="play">▶ Play</string>
    <string name="status_loading">Status: Loading...</string>
    <string name="play_2">▶ Play</string>
    <string name="pause_2">⏸ Pause</string>
    <string name="stop_2">⏹ Stop</string>
    <string name="restart_2">⏮ Restart</string>
</resources>